fixe a z-index bug

--- a/src/css/Header.styl
+++ b/src/css/Header.styl
@@ -3,7 +3,7 @@
   width 100%
   box-shadow shadow-bottom
   background mainColor
-  z-index 4
+  z-index 5
   &__logo
     &__img
       width 150px
