--- a/src/css/Sidebar.styl
+++ b/src/css/Sidebar.styl
@@ -36,7 +36,7 @@ leftside()
   position relative
   transition all sidebar-animate-speed
   width sidebar-width
-  z-index 2
+  z-index 4
   &.sidebarclose
     width 0
   &__expand
